crates/textual/tests/snapshots/examples_snapshot__snapshot_link_background_example_ansi.snap
---
source: crates/textual/tests/examples_snapshot.rs
expression: canvas.to_ansi_snapshot()
---
[38;2;224;224;224m[48;2;18;18;18mVisit the Textualize website.                                     [39m              [0m
[38;2;224;224;224m[48;2;18;18;18mClick [0m[4m[38;2;255;222;222m[48;2;255;0;0mhere[0m[38;2;224;224;224m[48;2;18;18;18m for the bell sound.                    [39m                              [0m
[38;2;224;224;224m[48;2;18;18;18mYou can also click [0m[4m[38;2;240;240;223m[48;2;136;136;9mhere[0m[38;2;224;224;224m[48;2;18;18;18m for the bell sound.                    [39m                 [0m
[0m[4m[38;2;33;22;6m[48;2;254;166;43mExit this application.[0m[38;2;224;224;224m[48;2;18;18;18m                    [39m                                      [0m
[48;2;18;18;18m                                                                                [0m
[48;2;18;18;18m                                                                                [0m
[48;2;18;18;18m                                                                                [0m
[48;2;18;18;18m                                                                                [0m
[48;2;18;18;18m                                                                                [0m
[48;2;18;18;18m                                                                                [0m
[48;2;18;18;18m                                                                                [0m
[48;2;18;18;18m                                                                                [0m
[48;2;18;18;18m                                                                                [0m
[48;2;18;18;18m                                                                                [0m
[48;2;18;18;18m                                                                                [0m
[48;2;18;18;18m                                                                                [0m
[48;2;18;18;18m                                                                                [0m
[48;2;18;18;18m                                                                                [0m
[48;2;18;18;18m                                                                                [0m
[48;2;18;18;18m                                                                                [0m
[48;2;18;18;18m                                                                                [0m
[48;2;18;18;18m                                                                                [0m
[48;2;18;18;18m                                                                                [0m
[48;2;18;18;18m                                                                                [0m
