crates/textual/tests/snapshots/examples_snapshot__snapshot_link_style_example_svg.snap
---
source: crates/textual/tests/examples_snapshot.rs
expression: "canvas.to_svg(Some(\"Link Style Example\"))"
---
<svg class="rich-terminal" viewBox="0 0 976 585.6" xmlns="http://www.w3.org/2000/svg">
    <!-- Generated by texrs -->
    <style>

    @font-face {
        font-family: "Fira Code";
        src: local("FiraCode-Regular"),
                url("https://cdnjs.cloudflare.com/ajax/libs/firacode/6.2.0/woff2/FiraCode-Regular.woff2") format("woff2"),
                url("https://cdnjs.cloudflare.com/ajax/libs/firacode/6.2.0/woff/FiraCode-Regular.woff") format("woff");
        font-style: normal;
        font-weight: 400;
    }
    @font-face {
        font-family: "Fira Code";
        src: local("FiraCode-Bold"),
                url("https://cdnjs.cloudflare.com/ajax/libs/firacode/6.2.0/woff2/FiraCode-Bold.woff2") format("woff2"),
                url("https://cdnjs.cloudflare.com/ajax/libs/firacode/6.2.0/woff/FiraCode-Bold.woff") format("woff");
        font-style: bold;
        font-weight: 700;
    }

    .terminal-matrix {
        font-family: Fira Code, monospace, monospace;
        font-size: 20px;
        line-height: 24.4px;
        font-variant-east-asian: full-width;
    }
    .terminal-r1 { fill: #e0e0e0 }
    </style>
    <defs>
    <clipPath id="terminal-clip">
      <rect x="0" y="0" width="976" height="585.6" />
    </clipPath>
    <clipPath id="terminal-line-0">
      <rect x="0" y="0" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-1">
      <rect x="0" y="24.4" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-2">
      <rect x="0" y="48.8" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-3">
      <rect x="0" y="73.2" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-4">
      <rect x="0" y="97.6" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-5">
      <rect x="0" y="122" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-6">
      <rect x="0" y="146.4" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-7">
      <rect x="0" y="170.8" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-8">
      <rect x="0" y="195.2" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-9">
      <rect x="0" y="219.59999" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-10">
      <rect x="0" y="244" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-11">
      <rect x="0" y="268.4" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-12">
      <rect x="0" y="292.8" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-13">
      <rect x="0" y="317.19998" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-14">
      <rect x="0" y="341.6" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-15">
      <rect x="0" y="366" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-16">
      <rect x="0" y="390.4" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-17">
      <rect x="0" y="414.8" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-18">
      <rect x="0" y="439.19998" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-19">
      <rect x="0" y="463.6" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-20">
      <rect x="0" y="488" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-21">
      <rect x="0" y="512.39996" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-22">
      <rect x="0" y="536.8" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-23">
      <rect x="0" y="561.2" width="976" height="24.65"/>
    </clipPath>
    </defs>
    <g transform="translate(0, 0)" clip-path="url(#terminal-clip)">
    <rect fill="#121212" x="0" y="0" width="976" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#121212" x="0" y="24.4" width="976" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#121212" x="0" y="48.8" width="976" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#121212" x="0" y="73.2" width="976" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#121212" x="0" y="97.6" width="976" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#121212" x="0" y="122" width="976" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#121212" x="0" y="146.4" width="976" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#121212" x="0" y="170.8" width="976" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#121212" x="0" y="195.2" width="976" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#121212" x="0" y="219.59999" width="976" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#121212" x="0" y="244" width="976" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#121212" x="0" y="268.4" width="976" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#121212" x="0" y="292.8" width="976" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#121212" x="0" y="317.19998" width="976" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#121212" x="0" y="341.6" width="976" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#121212" x="0" y="366" width="976" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#121212" x="0" y="390.4" width="976" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#121212" x="0" y="414.8" width="976" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#121212" x="0" y="439.19998" width="976" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#121212" x="0" y="463.6" width="976" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#121212" x="0" y="488" width="976" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#121212" x="0" y="512.39996" width="976" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#121212" x="0" y="536.8" width="976" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#121212" x="0" y="561.2" width="976" height="24.4" shape-rendering="crispEdges"/>
    <g class="terminal-matrix">
    <text class="terminal-r1" x="0" y="20.4" textLength="805.2" clip-path="url(#terminal-line-0)">Visit&#160;the&#160;Textualize&#160;website.&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</text>
    <text class="terminal-r1" x="0" y="44.8" textLength="73.2" clip-path="url(#terminal-line-1)">Click&#160;</text>
    <text class="terminal-r1" x="73.2" y="44.8" textLength="48.8" style="font-weight: bold; font-style: italic; text-decoration: underline;" clip-path="url(#terminal-line-1)">here</text>
    <text class="terminal-r1" x="122" y="44.8" textLength="488" clip-path="url(#terminal-line-1)">&#160;for&#160;the&#160;bell&#160;sound.&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</text>
    <text class="terminal-r1" x="0" y="69.2" textLength="231.8" clip-path="url(#terminal-line-2)">You&#160;can&#160;also&#160;click&#160;</text>
    <text class="terminal-r1" x="231.8" y="69.2" textLength="48.8" style="text-decoration: underline line-through;" clip-path="url(#terminal-line-2)">here</text>
    <text class="terminal-r1" x="280.6" y="69.2" textLength="488" clip-path="url(#terminal-line-2)">&#160;for&#160;the&#160;bell&#160;sound.&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</text>
    <text class="terminal-r1" x="0" y="93.6" textLength="268.4" style="font-weight: bold; text-decoration: underline;" clip-path="url(#terminal-line-3)">Exit&#160;this&#160;application.</text>
    <text class="terminal-r1" x="268.4" y="93.6" textLength="244" clip-path="url(#terminal-line-3)">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</text>
    </g>
    </g>
</svg>
