crates/textual/tests/snapshots/examples_snapshot__snapshot_opacity_example_ansi.snap
---
source: crates/textual/tests/examples_snapshot.rs
expression: canvas.to_ansi_snapshot()
---
[38;2;0;0;0m[48;2;0;0;0m▛▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▜[0m
[38;2;0;0;0m[48;2;0;0;0m▌[39m                                 opacity: 0%                                  [38;2;0;0;0m▐[0m
[38;2;0;0;0m[48;2;0;0;0m▌[39m                                                                              [38;2;0;0;0m▐[0m
[38;2;0;0;0m[48;2;0;0;0m▙▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▟[0m
[38;2;8;36;64m[48;2;8;45;43m▛▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▜[0m
[38;2;8;36;64m[48;2;8;45;43m▌[39m                                                                              [38;2;8;36;64m▐[0m
[38;2;8;36;64m[48;2;8;45;43m▌[39m                                 opacity: 25%                                 [38;2;8;36;64m▐[0m
[38;2;8;36;64m[48;2;8;45;43m▌[39m                                                                              [38;2;8;36;64m▐[0m
[38;2;8;36;64m[48;2;8;45;43m▙▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▟[0m
[38;2;15;72;128m[48;2;16;89;85m▛▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▜[0m
[38;2;15;72;128m[48;2;16;89;85m▌[39m                                                                              [38;2;15;72;128m▐[0m
[38;2;15;72;128m[48;2;16;89;85m▌[39m                                 opacity: 50%                                 [38;2;15;72;128m▐[0m
[38;2;15;72;128m[48;2;16;89;85m▌[39m                                                                              [38;2;15;72;128m▐[0m
[38;2;15;72;128m[48;2;16;89;85m▙▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▟[0m
[38;2;23;108;191m[48;2;24;134;128m▛▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▜[0m
[38;2;23;108;191m[48;2;24;134;128m▌[39m                                                                              [38;2;23;108;191m▐[0m
[38;2;23;108;191m[48;2;24;134;128m▌[39m                                 opacity: 75%                                 [38;2;23;108;191m▐[0m
[38;2;23;108;191m[48;2;24;134;128m▌[39m                                                                              [38;2;23;108;191m▐[0m
[38;2;23;108;191m[48;2;24;134;128m▙▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▟[0m
[38;2;30;144;255m[48;2;32;178;170m▛▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▜[0m
[38;2;30;144;255m[48;2;32;178;170m▌[39m                                                                              [38;2;30;144;255m▐[0m
[38;2;30;144;255m[48;2;32;178;170m▌[39m                                opacity: 100%                                 [38;2;30;144;255m▐[0m
[38;2;30;144;255m[48;2;32;178;170m▌[39m                                                                              [38;2;30;144;255m▐[0m
[38;2;30;144;255m[48;2;32;178;170m▙▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▟[0m
