crates/textual/tests/snapshots/examples_snapshot__snapshot_outline_all_example.snap
---
source: crates/textual/tests/examples_snapshot.rs
expression: canvas.to_snapshot()
---
   +------------------+                                  ┏╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍┓
   |      ascii       |              blank               ╏      dashed      ╏
   +------------------+                                  ┗╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍┛


   ╔══════════════════╗       ┏━━━━━━━━━━━━━━━━━━┓
   ║      double      ║       ┃      heavy       ┃           hidden/none
   ╚══════════════════╝       ┗━━━━━━━━━━━━━━━━━━┛


   ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔       ▗▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▖
           hkey               ▐      inner       ▌               none
   ▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁       ▝▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▘


   ▛▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▜       ╭──────────────────╮       ┌──────────────────┐
   ▌      outer       ▐       │      round       │       │      solid       │
   ▙▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▟       ╰──────────────────╯       └──────────────────┘


   ▊▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▎       ▏                  ▕       ▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁
   ▊       tall       ▎       ▏       vkey       ▕       ▎       wide       ▊
   ▊▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▎       ▏                  ▕       ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
